section map finished

--- a/index.html
+++ b/index.html
@@ -607,7 +607,43 @@
                         </div>
                     </form>
                 </div>
-                
+        </section>
+        <section class="default default--map">
+            <div class="section__body">
+                <div class="section-map">
+                    <div class="map__info">
+                        <div class="map__items">
+                            <div class="map__img">
+                                <img src="/assets/images/carta.png" alt="email-icon">
+                            </div>                        
+                            <span>PO Box 16122 collins Street West Victoria 8007 Australia</span>
+                        </div>
+                        <div class="map__items">
+                            <div class="map__img">
+                                <img src="/assets/images/localizacao.png" alt="local-icon">
+                            </div>                        
+                            <span>121 King Street, Melbourne Victoria 3000 Australia</span>
+                        </div>
+                        <div class="map__items">
+                            <div class="map__img">
+                                <img src="/assets/images/telefone.png" alt="phone-icon">
+                            </div>                        
+                            <span>+00 0 1234 5678</span>
+                        </div>
+                        <div class="map__items">
+                            <div class="map__img">
+                                <img src="/assets/images/arroba.png" alt="@-icon">
+                            </div>                        
+                            <span>bukindesign@gmail.com</span>
+                        </div>
+                        <div class="map__items">
+                            <div class="map__img">
+                                <img src="/assets/images/web.png" alt="web-icon">
+                            </div>                        
+                            <span>www.envato.com</span>
+                        </div>
+                    </div>
+                </div>
         </section>
     </main>
     
