--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Awax</title>
+    <link rel="icon" href="/assets/images/logo.jpg" type="image/x-icon">
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
@@ -607,6 +608,7 @@
                         </div>
                     </form>
                 </div>
+            </div>
         </section>
         <section class="default default--map">
             <div class="section__body">
@@ -644,11 +646,54 @@
                         </div>
                     </div>
                 </div>
+            </div>
         </section>
     </main>
     
-    <footer>
-
+    <footer class="default default--footer">
+        <div class="section__body">
+            <div class="section-footer">
+                <div class="footer__right__area">
+                    <div class="footer__right">
+                        <div class="right__items">
+                            <img src="/assets/images/twitter.png"    alt="twitter-icon-footer">
+                        </div>
+                        <div class="right__items right__items--active">
+                            <img src="/assets/images/linkedin.png"   alt="linkedin-icon-footer">
+                        </div>
+                        <div class="right__items">
+                            <img src="/assets/images/facebook.png"   alt="facebook-icon-footer">
+                        </div>
+                        <div class="right__items">
+                            <img src="/assets/images/googleplus.png" alt="googleplus-icon-footer">
+                        </div>
+                        <div class="right__items">
+                            <img src="/assets/images/pinterest.png"  alt="pinterest-icon-footer">
+                        </div>
+                        <div class="right__items">
+                            <h5>...</h5>
+                        </div>
+                    </div>
+                    <div class="copy__right">
+                        <h4>Awax  &copy; 2022 <br/> by João Kuchnir</h4>
+                    </div>
+                </div>
+                <div class="footer__center">
+                    <h4>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur architecto quas ipsam deleniti ipsum assumenda iusto? Ea expedita itaque suscipit odit perspiciatis quaerat esse corrupti porro consequuntur officiis. Culpa cum in ducimus tempora rem corrupti asperiores consequuntur porro non harum rerum, vel iste id laudantium laboriosam molestias. Maxime, iure rerum
+                        itaque suscipit odit perspiciatis quaerat esse corrupti porro consequuntur officiis. Culpa cum in ducimus tempora rem 
+                        Culpa cum in ducimus tempora
+                    </h4>
+                </div>
+                <div class="footer__left">
+                    <div class="footer__form">
+                        <input class="input" type="email" name="email" placeholder="EMAIL TO SUBSCRIBE">
+                        <button type="submit" class="button">Subscribe</button>
+                    </div>
+                    
+                </div>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
