continue responsive  work

--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
                 <img src="assets/images/logo.jpg" alt="logo">
             </div>
             <div class="header__menu">
-                <nav>
+                    <img class="menu-hamburguer" src="/assets/images/menu.png" alt="menu-hamburguer">
+                <nav class="nav-mobile">
                     <ul>
                         <li><a href="home">Home</a></li>
-                        <li><a href="about-us">About Us</a></li>
+                        <li><a href="about-us" class="active-mobile">About Us</a></li>
                         <li><a href="services">Services</a></li>
                         <li><a href="our-projects">Our Projects</a></li>
                         <li><a href="our-team">Our Team</a></li>
@@ -399,7 +400,7 @@
         <section class="default default--light default--light--price ">
             <div class="section__title">Price</div>
             <div class="section__desc">Pricing table</div>
-            <div class="section__body">
+            <div class="section__body section__body--mobile">
                 <div class="section-price-area">
                     <div class="section-price-table">
                         <div class="plans">
